--- a/style.css
+++ b/style.css
@@ -80,13 +80,7 @@ align-self:start;
 	grid-gap:2rem;
 }
 
-.grid-item1{
+.grid-item{
 	background-color: rgb(224,224,224);
 	border:1px solid grey;
 }
-
-
-.grid-item2 {
-	background-color: rgb(224,224,224);
-	border:1px solid grey;
-  }
