--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 
 h1{
 	text-align:center;
-	border-bottom: 1px solid grey;
+	box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
 	background-color: rgb(239,240,244);
 	padding:20px;
 	font-size:medium;
@@ -73,18 +73,65 @@ border-radius: 5px;
 align-self:start;
 }
 
-.card{
-	display:grid;
-	grid-template-columns: auto auto;
-	background-color: rgb(239,240,244);;
-	border:1px solid grey;
+
+.flexContainer2{
+	display:flex;
+	flex-wrap:wrap;
+	margin-left:-20px;
+	margin-top:-20px;
+
+}
+
+
+.flexContainer2 .apiItem {
+	background:rgb(239,240,244);
+	text-align:right;
+	border:black solid;
+	border-width:thin;
+	flex:1 0 calc(50% - 20px);
+	box-sizing:border-box;
+	padding-left:20px;
+	padding-top:10px;
+	padding-right:35px;
+	margin-left:20px;
+	margin-top:20px;
+	position:relative;
+}
+
+
+.fas {
+font-size:2em;
+color:rgb(68,148,135);
+position:absolute;
+top:0.5em;
+right:0.7em;
 }
 
 .bookTitle{
-font-weight: bold;
+font-size:small;
+font-weight:500;
+text-align: left;
 }
 
 .bookId{
-	font-weight: bold;
+	font-size:small;
+	font-weight:500;
 	font-style: italic;
+	text-align: left;
 	}
+
+.bookAuthor{
+font-size:small;
+font-weight:300;
+text-align: left;
+}
+
+.bookDesc{
+font-size:small;
+font-weight:300;
+text-align: left;
+}
+
+.bookImg{
+	text-align:center;
+}
