--- a/style.css
+++ b/style.css
@@ -74,16 +74,30 @@ align-self:start;
 }
 
 
-.flexContainer2{
+.flexContainer2 {
+	font-size:small;
+	font-weight:300;
+	background:rgb(239,240,244);
+	border:black solid;
+	border-width:thin;
+	color:red;
+	padding-left:10px;
+	padding-top:10px;
+	padding-bottom:10px;
+	margin-bottom:20px;
+	margin-top:20px;
+	position:relative;
+}
+
+.flexContainer3 {
 	display:flex;
 	flex-wrap:wrap;
 	margin-left:-20px;
 	margin-top:-20px;
-
 }
 
 
-.flexContainer2 .apiItem {
+ .flexContainer3 .apiItem {
 	background:rgb(239,240,244);
 	text-align:right;
 	border:black solid;
@@ -96,7 +110,7 @@ align-self:start;
 	margin-left:20px;
 	margin-top:20px;
 	position:relative;
-}
+} 
 
 
 .fas {
