--- a/style.css
+++ b/style.css
@@ -112,15 +112,15 @@ align-self:start;
 	position:relative;
 } 
 
-
+/*
 .fas {
 font-size:2em;
 color:rgb(68,148,135);
 position:absolute;
-top:0.5em;
+top:0.8em;
 right:1.2em;
 }
-
+*/
 .bookTitle{
 font-size:small;
 font-weight:500;
