--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,120 @@
-
-body{
-	margin: 40px 20px 20px 20px;
-	font-family: 'Noto Sans JP', sans-serif;
+body {
+  margin: 40px 20px 20px 20px;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
-h1{
-	text-align:center;
-	box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
-	background-color: rgb(239,240,244);
-	padding:20px;
-	font-size:medium;
-	font-weight:300;
+h1 {
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(239, 240, 244);
+  padding: 20px;
+  font-size: medium;
+  font-weight: 300;
 }
 
-h2{
-	text-align:center;
-	padding-top:1px;
-	font-size:small;
-	font-weight:700;
-	}
-
-
-.flex-container{
-	display:flex;
-	flex-direction: column;
-	font-size:small;
-	font-weight:300;
+h2 {
+  text-align: center;
+  padding-top: 1px;
+  font-size: small;
+  font-weight: 700;
 }
 
-.srch{
-align-self:start;	
-padding: 5px;
-width:100%;
-margin-top:10px;
-margin-bottom:10px;
+.form {
+  align-self: start;
+  padding: 5px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.btn__icon {
-	font-size:2em;
-	border: none;
-	color:rgb(68,148,135);
-	position:absolute;
-	top:0.6em;
-	right:0.6em;
-	}
-
-.btn_Add{
-padding: 10px 30px;
-margin-top:10px;
-margin-bottom:10px;
-background-color: rgb(68,148,135);
-color:white;
-border:none;
-border-radius: 5px;
-align-self:center;
+.btn-icon {
+  font-size: 2em;
+  border: none;
+  color: rgb(68, 148, 135);
+  position: absolute;
+  top: 0.6em;
+  right: 0.6em;
 }
 
-.btn_Search
-{
-padding: 10px 40px;
-margin-top:10px;
-margin-bottom:10px;
-background-color: rgb(68,148,135);
-color:white;
-border:none;
-border-radius: 5px;
-align-self:start;
+.btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 40px;
+  background-color: rgb(68, 148, 135);
+  align-self: start;
 }
 
-.btn_Cancel
-{
-padding: 10px 50px;
-margin-top:10px;
-margin-bottom:10px;
-background-color: rgb(222,90,75);
-color:white;
-border:none;
-border-radius: 5px;
-align-self:start;
+.btn-centered {
+  align-self: center;
 }
 
-
-.flexContainer2 {
-	font-size:small;
-	font-weight:300;
-	background:rgb(239,240,244);
-	border:black solid;
-	border-width:thin;
-	color:red;
-	padding-left:10px;
-	padding-top:10px;
-	padding-bottom:10px;
-	margin-bottom:20px;
-	margin-top:20px;
-	position:relative;
+.btn-padding50 {
+  padding: 10px 50px;
 }
 
-.flexContainer3 {
-	display:flex;
-	flex-wrap:wrap;
-	margin-left:-20px;
-	margin-top:-20px;
+.btn-red {
+  background-color: rgb(222, 90, 75);
 }
 
-
- .flexContainer3 .apiItem {
-	background:rgb(239,240,244);
-	text-align:right;
-	border:black solid;
-	border-width:thin;
-	flex:1 0 calc(50% - 20px);
-	box-sizing:border-box;
-	padding-left:20px;
-	padding-top:10px;
-	padding-right:35px;
-	margin-left:20px;
-	margin-top:20px;
-	position:relative;
-} 
-
-
-.flexContainer4 {
-	display:flex;
-	flex-wrap:wrap;
-	margin-left:-20px;
-	margin-top:-20px;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  font-size: small;
+  font-weight: 300;
 }
 
-.flexContainer4 .apiItem {
-	background:rgb(239,240,244);
-	text-align:right;
-	border:black solid;
-	border-width:thin;
-	flex:1 0 calc(50% - 20px);
-	box-sizing:border-box;
-	padding-left:20px;
-	padding-top:10px;
-	padding-right:35px;
-	margin-left:20px;
-	margin-top:20px;
-	position:relative;
-} 
-
-
-
-.bookTitle{
-font-size:small;
-font-weight:500;
-text-align: left;
+.noResultFrame {
+  background: rgb(239, 240, 244);
+  border: black solid;
+  border-width: thin;
+  color: red;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  position: relative;
 }
 
-.bookId{
-	font-size:small;
-	font-weight:500;
-	font-style: italic;
-	text-align: left;
-	}
-
-.bookAuthor{
-font-size:small;
-font-weight:300;
-text-align: left;
+.frame {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
+  margin-top: -20px;
 }
 
-.bookDesc{
-	font-size:small;
-	font-weight:300;
-	text-align: left;
-	}
-
-
-b {
-	font-size:small;
-	font-weight:300;
-	text-align: left;
+.frame .apiItem {
+  background: rgb(239, 240, 244);
+  text-align: right;
+  border: black solid;
+  border-width: thin;
+  flex: 1 0 calc(50% - 20px);
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-right: 35px;
+  margin-left: 20px;
+  margin-top: 20px;
+  position: relative;
 }
 
-p{
-	font-size:small;
-	font-weight:300;
-	text-align: left;
+p {
+  font-size: small;
+  font-weight: 300;
+  text-align: left;
 }
 
-.bookImg{
-	text-align:center;
+.p-bold {
+  font-weight: 500;
+}
+
+.p-italic {
+  font-style: italic;
+}
+
+.p-img {
+  text-align: center;
 }
