--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,121 +1,5 @@
-body {
-	margin: 40px 20px 20px 20px;
-	font-family: "Noto Sans JP", sans-serif;
-  }
-  
-  h1 {
-	text-align: center;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	background-color: rgb(239, 240, 244);
-	padding: 20px;
-	font-size: medium;
-	font-weight: 300;
-  }
-  
-  h2 {
-	text-align: center;
-	padding-top: 1px;
-	font-size: small;
-	font-weight: 700;
-  }
-  
-  .form {
-	align-self: start;
-	padding: 5px;
-	width: 100%;
-	margin-top: 10px;
-	margin-bottom: 10px;
-  }
-  
-  .btn-icon {
-	font-size: 2em;
-	border: none;
-	color: rgb(68, 148, 135);
-	position: absolute;
-	top: 0.6em;
-	right: 0.6em;
-  }
-  
-  .btn {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	padding: 10px 40px;
-	background-color: rgb(68, 148, 135);
-	align-self: start;
-  }
-  
-  .btn-centered {
-	align-self: center;
-  }
-  
-  .btn-padding50 {
-	padding: 10px 50px;
-  }
-  
-  .btn-red {
-	background-color: rgb(222, 90, 75);
-  }
-  
-  .flex-container {
-	display: flex;
-	flex-direction: column;
-	font-size: small;
-	font-weight: 300;
-  }
-  
-  .noResultFrame {
-	background: rgb(239, 240, 244);
-	border: black solid;
-	border-width: thin;
-	color: red;
-	padding-left: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	position: relative;
-  }
-  
-  .frame {
-	display: flex;
-	flex-wrap: wrap;
-	margin-left: -20px;
-	margin-top: -20px;
-  }
-  
-  .frame .apiItem {
-	background: rgb(239, 240, 244);
-	text-align: right;
-	border: black solid;
-	border-width: thin;
-	flex: 1 0 calc(50% - 20px);
-	box-sizing: border-box;
-	padding-left: 20px;
-	padding-top: 10px;
-	padding-right: 35px;
-	margin-left: 20px;
-	margin-top: 20px;
-	position: relative;
-  }
-  
-  p {
-	font-size: small;
-	font-weight: 300;
-	text-align: left;
-  }
-  
-  .p-bold {
-	font-weight: 500;
-  }
-  
-  .p-italic {
-	font-style: italic;
-  }
-  
-  .p-img {
-	text-align: center;
-  }
-  
+@import "./utils/variables";
+@import "./layout/form";
+@import "./layout/container";
+@import "./components/button";
+@import "./base/base";
